# IMPACT

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_dashboard.py  run_demo.py  test_crawler.py  test_extractor.py  test_impact.py  test_regression.py
.github/workflows/: ci.yml  publish.yml
adapters/java/: extractor.py  static_analyzer.py
core/: ecosystem_crawler.py  export_crawled.py  github_collector.py  graph_utils.py  license_check.py  mcp_server.py  profile_zip_memory.py  run_dashboard.py  run_demo.py  shacl_validator.py  story_logger.py
core/agents/: coordinator.py  diff_agent.py  graph_agent.py  llm_agent.py  metrics_agent.py
core/crawler/: __init__.py  crawler.py  database.py  discovery.py  downloader.py  network.py  processor.py
core/dashboard/: api_server.py  app.js  index.html  style.css  v1_graph.json  v2_graph.json
core/schema/: impact.ttl  schema.json  shapes.ttl
dashboard/: app.js  index.html  style.css
docs/: DEPLOY.md  agent_traces_log_with_commentary.md  crawler_memory_profiling.md  cross_repository_parsing_strategies.md  dashboard_user_journey.md  database_schema_and_cli.md  extractor_extension_api.md  github_token_setup.md  license_compliance_audit.md  licensing_model.md  multilingual_ontology_metadata_requirements.md  non_java_domain_modeling.md  sprint_backlog_db_migration.md  usability_survey_template.md  visualize_design_patterns_network.md
k8s/: configmap.yaml  crawler-deployment.yaml  discovery-job.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secret.yaml.example
statistics/: list_benchmark_files.py  project_metrics_comparison.py  project_metrics_comparison_fast.py  summarize_benchmarks.py
test_projects/: pmd_report_v2.json  v1_graph.graph  v1_graph.json  v1_graph_new.json  v2_graph.json  v2_graph_new.json
test_projects/github_benchmarks/: crawler_queue.db
test_projects/github_benchmarks/java/google_gson/: gson-parent-2.8.5_graph.graph  gson-parent-2.8.5_graph.json  gson-parent-2.8.5_to_gson-parent-2.8.6_analysis.txt  gson-parent-2.8.6_graph.graph  gson-parent-2.8.6_graph.json
test_projects/github_benchmarks/java/iluwatar_java-design-patterns/: open-source-java-design-patterns-1st-edition_graph.graph  open-source-java-design-patterns-1st-edition_graph.json  open-source-java-design-patterns-1st-edition_to_open-source-java-design-patterns-2nd-edition_analysis.txt  open-source-java-design-patterns-2nd-edition_graph.graph  open-source-java-design-patterns-2nd-edition_graph.json
test_projects/github_benchmarks/java/jhy_jsoup/: jsoup-1.14.1_graph.graph  jsoup-1.14.1_graph.json  jsoup-1.14.1_to_jsoup-1.14.2_analysis.txt  jsoup-1.14.2_graph.graph  jsoup-1.14.2_graph.json
test_projects/github_benchmarks/java/krahets_hello-algo/: 1.2.0_graph.graph  1.2.0_graph.json  1.2.0_to_1.3.0_analysis.txt  1.3.0_graph.graph  1.3.0_graph.json
test_projects/github_benchmarks/java/macrozheng_mall/: v1.0.2_graph.graph  v1.0.2_graph.json  v1.0.2_to_v1.0.3_analysis.txt  v1.0.3_graph.graph  v1.0.3_graph.json
test_projects/github_benchmarks/java/reactive-streams_reactive-streams-jvm/: v1.0.2_graph.graph  v1.0.2_graph.json  v1.0.2_to_v1.0.3_analysis.txt  v1.0.3_graph.graph  v1.0.3_graph.json
test_projects/github_benchmarks/java/square_javapoet/: javapoet-1.12.0_graph.graph  javapoet-1.12.0_graph.json  javapoet-1.12.0_to_javapoet-1.13.0_analysis.txt  javapoet-1.13.0_graph.graph  javapoet-1.13.0_graph.json
test_projects/github_benchmarks/jhy_jsoup/: jsoup-1.14.1_graph.json  jsoup-1.14.1_to_jsoup-1.14.2_analysis.txt  jsoup-1.14.2_graph.json
test_projects/github_benchmarks/square_javapoet/: javapoet-1.12.0_graph.json  javapoet-1.13.0_graph.json
test_projects/telemetry_service_v1/src/com/telemetry/: DataCollector.java  Database.java  Service.java
test_projects/telemetry_service_v2/src/com/telemetry/: Database.java  NewUtility.java  Service.java
tests/: test_crawler.py  test_db_migration.py  test_extractor.py  test_impact.py
