[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-core"
version = "1.0.0"
description = "Intent-based Multi-agent Platform for Architectural Change Tracking Core"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx>=2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
